--- a/communication_center_jitsi/views/res_config_settings_view.xml
+++ b/communication_center_jitsi/views/res_config_settings_view.xml
@@ -26,5 +26,56 @@
                 </xpath>
             </field>
         </record>
+
+        <record id="calendar_event_calendar_view_chekbox" model="ir.ui.view">
+            <field name="name">calendar.event.calendar</field>
+            <field name="model">calendar.event</field>
+            <field name="inherit_id" ref="calendar.view_calendar_event_form"/>
+            <field name="arch" type="xml">
+                <field name="location"  position="before">
+                    <field name="video_meeting_chekbox" invisible="1"/>
+                    <field name="online_meeting_link" attrs="{'invisible': [('video_meeting_chekbox', '!=', True)]}" widget="url">
+                    </field>
+                </field>
+                <field name="location" position="attributes">
+                    <attribute name="attrs">{'invisible':[('video_meeting_chekbox','=',True)]}</attribute>
+                </field>
+            </field>
+        </record>
+
+        <record id="calendar_event_calendar_view_video_padge" model="ir.ui.view">
+            <field name="name">calendar.event.calendar</field>
+            <field name="model">calendar.event</field>
+            <field name="inherit_id" ref="calendar.view_calendar_event_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//page[@name='page_misc']" position="after">
+                    <field name="video_meeting_chekbox" invisible="1"/>
+                    <page string ="Video Meeting" attrs="{'invisible': [('video_meeting_chekbox', '!=', True)]}">
+                        <group col="3">
+                                <field name="microphone_off"/>
+                                <field name="webcam_off"/>
+                                <field name="lobby_with_name"/>
+                                <field name="link_for_participants"/>
+                                <field name="link_for_moderator"/>
+                                <field name="no_recording"/>
+                                <field name="start_recording"/>
+                                <field name="rooms_creation"/>
+                        </group>
+                    </page>
+                </xpath>
+            </field>
+        </record>
+
+        <record id="calendar_event_calendar_view_remainder_button" model="ir.ui.view">
+            <field name="name">calendar.event.calendar</field>
+            <field name="model">calendar.event</field>
+            <field name="inherit_id" ref="calendar.view_calendar_event_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='alarm_ids']" position="after">
+                    <button col="3" name="hi" t-on-click="_onTrackingStatusClick">Hi</button>
+                </xpath>
+            </field>
+        </record>
+
     </data>
 </odoo>
