--- a/communication_center_jitsi/views/jitsi_controller.xml
+++ b/communication_center_jitsi/views/jitsi_controller.xml
@@ -6,10 +6,15 @@
             <script type="text/javascript" src='/communication_center_jitsi/static/src/js/external_api.js'></script>
         </xpath>
     </template>
+    <template id="style_meeting" inherit_id="website.assets_frontend">
+        <xpath expr="." position="inside">
+            <link rel="stylesheet" type="text/css" href="/communication_center_jitsi/static/src/css/controller_style.css"/>
+        </xpath>
+    </template>
 
     <template id="jitsi_meeting_site" name="placeholder_for_jitsi_meeting">
         <t t-call="website.layout">
-            <div id="jitsi_meeting_placeholder" class="container">
+            <div id="jitsi_meeting_placeholder" >
                 Hipity Hoppity Get of my property!
             </div>
         </t>
