--- a/communication_center_jitsi/views/res_config_settings_view.xml
+++ b/communication_center_jitsi/views/res_config_settings_view.xml
@@ -34,7 +34,7 @@
             <field name="arch" type="xml">
                 <field name="location"  position="before">
                     <field name="video_meeting_chekbox" invisible="1"/>
-                    <field name="online_meeting_link" attrs="{'invisible': [('video_meeting_chekbox', '!=', True)]}" widget="url">
+                    <field name="controller_link" attrs="{'invisible': [('video_meeting_chekbox', '!=', True)]}" widget="url">
                     </field>
                 </field>
                 <field name="location" position="attributes">
@@ -52,7 +52,7 @@
                     <field name="video_meeting_chekbox" invisible="1"/>
                     <page name="video_meeting" string ="Video Meeting" attrs="{'invisible': [('video_meeting_chekbox', '!=', True)]}">
                         <group col="3">
-                                <field name="room_name"/>
+                                <field name="room_name" id="room_name_id"/>
                                 <field name="microphone_off"/>
                                 <field name="webcam_off"/>
                                 <field name="lobby_with_name"/>
@@ -67,15 +67,21 @@
             </field>
         </record>
 
-        <record id="calendar_event_calendar_view_remainder_button" model="ir.ui.view">
+        <record id="calendar_event_calendar_view" model="ir.ui.view">
             <field name="name">calendar.event.calendar</field>
             <field name="model">calendar.event</field>
-            <field name="inherit_id" ref="calendar.view_calendar_event_form"/>
+            <field name="inherit_id" ref="calendar.view_calendar_event_calendar"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='alarm_ids']" position="after">
-                    <button col="3" name="hi" t-on-click="_onTrackingStatusClick">Hi</button>
-                </xpath>
-            </field>
+                <field name="partner_ids"  position="before">
+                    <field name="video_meeting_chekbox" invisible="1"/>
+                    <field name="controller_link" attrs="{'invisible': [('video_meeting_chekbox', '!=', False)]}" widget="url">
+                    </field>
+                </field>
+                <field name="controller_link" position="attributes">
+                    <attribute name="attrs">{'invisible':[('video_meeting_chekbox','!=',True)]}</attribute>
+                </field>
+                </field>
         </record>
+
     </data>
 </odoo>
