[IMP] Rom name can de sett by the user if they want to

--- a/communication_center_calendar_online_meeting/views/calendar_view.xml
+++ b/communication_center_calendar_online_meeting/views/calendar_view.xml
@@ -7,6 +7,7 @@
             <field name="arch" type="xml">
                 <field name="location" position="after">
                     <field name="video_meeting_chekbox"/>
+                    <field name="link_suffix" />
                 </field>
             </field>
         </record>
