--- a/communication_center_jitsi/views/jitsi_controller.xml
+++ b/communication_center_jitsi/views/jitsi_controller.xml
@@ -14,10 +14,26 @@
 
     <template id="jitsi_meeting_site" name="placeholder_for_jitsi_meeting">
         <t t-call="website.layout">
-            <div id="jitsi_meeting_placeholder" >
-                <!--Hipity Hoppity Get of my property!-->
-                <t t-esc="room_name"/>
+            <div id="jitsi_meeting_placeholder" t-att-data-jitsi="jitsi" t-att-data-room_name="event.room_name">
+                <!--Hipity Hoppity Get of my property!>
+                <t t-esc="jitsi"/>
+                <t t-esc="event.link_suffix"/-->
+                <t t-esc="set_room"/>
+                <!--t t-esc="event.room_name"/-->
             </div>
         </t>
     </template>
+
+
+        <record id="calendar_event_form_view" model="ir.ui.view">
+            <field name="name">calendar.event.form</field>
+            <field name="model">calendar.event</field>
+            <field name="inherit_id" ref="calendar.view_calendar_event_form"/>
+            <field name="arch" type="xml">
+                <field name="video_meeting_chekbox" position="after">
+                    <field name="link_suffix" />
+                </field>
+            </field>
+        </record>
+    
 </odoo>
