[IMP] added a unik id to the jitsi room names, the id is invisible to the user, the user can still set and see the room name that they write

--- a/communication_center_jitsi/views/res_config_settings_view.xml
+++ b/communication_center_jitsi/views/res_config_settings_view.xml
@@ -13,7 +13,7 @@
                             <span class="o_form_label">Jitsi URL</span>
                             <span class="fa fa-globe"/>
                             <div class="text-muted">
-                                Enter your Jitsi URL
+                                Enter your Jitsi URL without https:// or http://
                             </div>
                             <div class="content-group">
                                 <div class="row mt16">
