--- a/communication_center_jitsi/views/jitsi_controller.xml
+++ b/communication_center_jitsi/views/jitsi_controller.xml
@@ -14,12 +14,14 @@
 
     <template id="jitsi_meeting_site" name="placeholder_for_jitsi_meeting">
         <t t-call="website.layout">
-            <div id="jitsi_meeting_placeholder" t-att-data-jitsi="jitsi" t-att-data-room_name="event.room_name">
-                <!--Hipity Hoppity Get of my property!>
-                <t t-esc="jitsi"/>
-                <t t-esc="event.link_suffix"/-->
+            <div id="jitsi_meeting_placeholder" 
+            t-att-data-jitsi="jitsi" 
+            t-att-data-room_name="event.room_name"
+            t-att-data-link_suffix="event.link_suffix">
+                <!--t t-esc="jitsi.link_suffix"/>
+                <t t-esc="event.link_suffix"/>
                 <t t-esc="set_room"/>
-                <!--t t-esc="event.room_name"/-->
+                <t t-esc="event.room_name"/-->
             </div>
         </t>
     </template>
