--- a/communication_center_calendar_online_meeting/views/calendar_view.xml
+++ b/communication_center_calendar_online_meeting/views/calendar_view.xml
@@ -6,8 +6,7 @@
             <field name="inherit_id" ref="calendar.view_calendar_event_form"/>
             <field name="arch" type="xml">
                 <field name="location" position="after">
-                    <field name="video_meeting_chekbox"/>
-                    <field name="link_suffix" />
+                    <field name="video_meeting_checkbox"/>
                 </field>
             </field>
         </record>
