--- a/communication_center_jitsi/views/res_config_settings_view.xml
+++ b/communication_center_jitsi/views/res_config_settings_view.xml
@@ -27,18 +27,18 @@
             </field>
         </record>
 
-        <record id="calendar_event_calendar_view_chekbox" model="ir.ui.view">
+        <record id="calendar_event_calendar_view_checkbox" model="ir.ui.view">
             <field name="name">calendar.event.calendar</field>
             <field name="model">calendar.event</field>
             <field name="inherit_id" ref="calendar.view_calendar_event_form"/>
             <field name="arch" type="xml">
                 <field name="location"  position="before">
-                    <field name="video_meeting_chekbox" invisible="1"/>
-                    <field name="controller_link" attrs="{'invisible': [('video_meeting_chekbox', '!=', True)]}" widget="url">
+                    <field name="video_meeting_checkbox" invisible="1"/>
+                    <field name="controller_link" attrs="{'invisible': [('video_meeting_checkbox', '!=', True)]}" widget="url">
                     </field>
                 </field>
                 <field name="location" position="attributes">
-                    <attribute name="attrs">{'invisible':[('video_meeting_chekbox','=',True)]}</attribute>
+                    <attribute name="attrs">{'invisible':[('video_meeting_checkbox','=',True)]}</attribute>
                 </field>
             </field>
         </record>
@@ -49,8 +49,8 @@
             <field name="inherit_id" ref="calendar.view_calendar_event_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//page[@name='page_misc']" position="after">
-                    <field name="video_meeting_chekbox" invisible="1"/>
-                    <page name="video_meeting" string ="Video Meeting" attrs="{'invisible': [('video_meeting_chekbox', '!=', True)]}">
+                    <field name="video_meeting_checkbox" invisible="1"/>
+                    <page name="video_meeting" string ="Video Meeting" attrs="{'invisible': [('video_meeting_checkbox', '!=', True)]}">
                         <group col="3">
                                 <field name="room_name" id="room_name_id"/>
                                 <field name="microphone_off"/>
@@ -73,12 +73,12 @@
             <field name="inherit_id" ref="calendar.view_calendar_event_calendar"/>
             <field name="arch" type="xml">
                 <field name="partner_ids"  position="before">
-                    <field name="video_meeting_chekbox" invisible="1"/>
-                    <field name="controller_link" attrs="{'invisible': [('video_meeting_chekbox', '!=', False)]}" widget="url">
+                    <field name="video_meeting_checkbox" invisible="1"/>
+                    <field name="controller_link" attrs="{'invisible': [('video_meeting_checkbox', '!=', False)]}" widget="url">
                     </field>
                 </field>
                 <field name="controller_link" position="attributes">
-                    <attribute name="attrs">{'invisible':[('video_meeting_chekbox','!=',True)]}</attribute>
+                    <attribute name="attrs">{'invisible':[('video_meeting_checkbox','!=',True)]}</attribute>
                 </field>
                 </field>
         </record>
