--- a/communication_center_jitsi/static/src/css/controller_style.css
+++ b/communication_center_jitsi/static/src/css/controller_style.css
@@ -8,3 +8,9 @@
     display: flex;
     justify-self: center;
 }
+
+.btn_holder {
+    display: flex;
+    justify-self: center;
+    background-color: lightgray;
+}
