Did somme clean upp

--- a/communication_center_jitsi/static/src/css/controller_style.css
+++ b/communication_center_jitsi/static/src/css/controller_style.css
@@ -12,5 +12,10 @@
 .btn_holder {
     display: flex;
     justify-self: center;
-    background-color: lightgray;
+    /*background-color: lightgray;
+    padding: 15px;*/
+}
+
+.btn_holder>* {
+    margin: 15px;
 }
