--- a/communication_center_jitsi/views/res_config_settings_view.xml
+++ b/communication_center_jitsi/views/res_config_settings_view.xml
@@ -42,11 +42,11 @@
                                 <field name="webcam_off"/>
                                 <field name="lobby_with_name"/>
                                 <field name="lobby_with_let_in"/>
-                                <field name="link_for_participants"/>
+                                <!-- <field name="link_for_participants"/>
                                 <field name="link_for_moderator"/>
                                 <field name="no_recording"/>
                                 <field name="start_recording"/>
-                                <field name="rooms_creation"/>
+                                <field name="rooms_creation"/> -->
                         </group>
                     </page>
                 </xpath>
