--- a/communication_center_jitsi/views/jitsi_controller.xml
+++ b/communication_center_jitsi/views/jitsi_controller.xml
@@ -14,8 +14,8 @@
                 <div class="btn_holder">
                     <a class="btn btn-primary jitsi_button">Click me!</a>
                     <a class="btn btn-danger jitsi_button_lobby">Lobby off!</a>
-                    <a class="btn btn-primary jitsi_button_rec">Start Recording!</a>
-                    <!--a class="btn btn-primary jitsi_button_recoff">Rec off!</a--> 
+                    <a class="btn btn-primary jitsi_button_rec">Start Recording!</a> 
+                    <a class="btn btn-primary jitsi_button_room">Create Room!</a>
                 </div>
         </div>
         </t>
