--- a/communication_center_jitsi/views/assets.xml
+++ b/communication_center_jitsi/views/assets.xml
@@ -2,7 +2,7 @@
     <template id="jitsi_meeting" name="calender_meeting_assets" inherit_id="web.assets_frontend">
         <xpath expr="." position="inside">
             <script type="text/javascript" src="/communication_center_jitsi/static/src/js/meeting_settings.js"/>
-            <script type="text/javascript" src='/communication_center_jitsi/static/src/js/external_api.js'></script>
+            <script type="text/javascript" src='/communication_center_jitsi/static/src/js/external_api.js'/>
         </xpath>
     </template>
     <template id="style_meeting" inherit_id="website.assets_frontend">
