--- a/communication_center_jitsi/static/src/css/controller_style.css
+++ b/communication_center_jitsi/static/src/css/controller_style.css
@@ -10,12 +10,15 @@
 }
 
 .btn_holder {
+    pointer-events: none;
+    position: fixed;
     display: flex;
-    justify-self: center;
-    /*background-color: lightgray;
-    padding: 15px;*/
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
 }
 
-.btn_holder>* {
+.btn_holder>a {
+    pointer-events: all;
     margin: 15px;
 }
